# BTT-Studio

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  check_symbols.py  flake.nix  missing.txt  notes.md
config/: VersionList.sym  check_includes.py  config.cmake
include/: ImGui.h  imgui_hid_mappings.h  logger.h
include/customBoot/: BootHooks.hpp  CustomBootLoad.hpp
include/helpers/: InputHelper.h  getHelper.h  saveFileHelper.h
include/menu/: InputDisplay.h  Menu.h  Timer.h
include/settings/: DemoHooks.hpp  TimerHooks.h
lib/custom/nn/: hid_custom.h  nn_common.hpp  os.h
lib/custom/nvn/: nvn_CppFuncPtrImpl.h
logging/: logserver.py
make-release/: release.py
romfs/LayoutData/: SpeedbootLoad.szs
romfs/StageData/: CapWorldHomeStageMap.szs
src/: ImGui.cpp  ImGui.h  imgui_nvn.cpp  logger.cpp  logger.h  main.cpp
src/customBoot/: CustomBootLoad.cpp
src/helpers/: InputHelper.cpp  InputHelper.h  fsHelper.cpp  fsHelper.h  getHelper.cpp  getHelper.h  saveFileHelper.cpp  saveFileHelper.h
src/imgui_backend/: imgui_impl_nvn.hpp
src/menu/: InputDisplay.cpp  InputDisplay.h  Menu.cpp  Menu.h  Timer.cpp  Timer.h  stage_warp.cpp  stage_warp.h
src/nvnImGui/: imgui_nvn.cpp
src/settings/: DemoHooks.hpp  SettingsHooks.cpp  SettingsHooks.h  SettingsMgr.cpp  SettingsMgr.h  TimerHooks.cpp
syms/: custom.sym  test.sym  timer.sym
syms/game/: MapLayout.sym
syms/imgui/: sdk.sym
syms/nn/: fs.sym  hid.sym  mem.sym  nifm.sym  oe.sym  os.sym  socket.sym
syms/sead/: heap.sym  util.sym
(+38 files in other folders)
